# gSLICr

./: .gitignore  CMakeLists.txt  CleanCrap.bat  LICENCE  README.md  demo.cpp  gSLIC.sln  gSLIC_defines.h  package.xml
ORUtils/: CMakeLists.txt  Image.h  MemoryBlock.h  MetalContext.h  MetalContext.mm  PlatformIndependence.h  Vector.h
engines/: gSLIC_core_engine.cpp  gSLIC_core_engine.h  gSLIC_seg_engine.cpp  gSLIC_seg_engine.h  gSLIC_seg_engine_GPU.cu  gSLIC_seg_engine_GPU.h  gSLIC_seg_engine_shared.h
gSLIC/: FastImgSeg.cpp  FastImgSeg.h  NVTimer.h  cudaDefines.h  cudaImgTrans.cu  cudaImgTrans.h  cudaSegEngine.cu  cudaSegEngine.h  cudaSegSLIC.cu  cudaSegSLIC.h  cudaUtil.cu  cudaUtil.h  gSLIC.vcxproj  gSLIC.vcxproj.filters  gSLIC_defines.h  gSLIC_io_tools.h  main.cpp
gSLIC/ORUtils/: README
gSLIC/engines/: gSLIC_core_engine.h  gSLIC_seg_engine.cpp  gSLIC_seg_engine.h  gSLIC_seg_engine_GPU.cu  gSLIC_seg_engine_GPU.h  gSLIC_seg_engine_shared.h
gSLIC/objects/: gSLIC_settings.h  gSLIC_spixel_info.h
gSLIC_Lib/: gSLIC.h  gSLIC_defines.h
gSLIC_Lib/engines/: gSLIC_core_engine.cpp  gSLIC_core_engine.h  gSLIC_seg_engine_GPU.cu  gSLIC_seg_engine_shared.h
gSLICr_Lib/: gSLICr.h  gSLICr_defines.h
gSLICr_Lib/engines/: gSLICr_core_engine.cpp  gSLICr_core_engine.h  gSLICr_seg_engine.cpp  gSLICr_seg_engine.h  gSLICr_seg_engine_GPU.cu  gSLICr_seg_engine_GPU.h  gSLICr_seg_engine_shared.h
gSLICr_Lib/objects/: gSLICr_settings.h  gSLICr_spixel_info.h
objects/: gSLIC_settings.h
testCV/: main.cpp  testCV.vcxproj
