<?xml version="1.0"?>
<package format="2">
  <name>gslicr</name>
  <version>0.0.0</version>
  <description>This is the software bundle "gSLICr", a library for real-time superpixel segmentation written in C++ and CUDA.</description>

  <maintainer email="Christian.Rauch@ed.ac.uk">Christian Rauch</maintainer>
  <maintainer email="carl@robots.ox.ac.uk">Carl Yuheng Ren</maintainer>
  <maintainer email="victor@robots.ox.ac.uk">Victor Adrian Prisacariu</maintainer>
  <maintainer email="ian.reid@adelaide.edu.au">Ian D Reid</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/gSLICr</url> -->

  <author email="carl@robots.ox.ac.uk">Carl Yuheng Ren</author>
  <author email="victor@robots.ox.ac.uk">Victor Adrian Prisacariu</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>cmake</buildtool_depend>

  <depend>libopencv-dev</depend>
  <depend>nvidia-cuda-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
